trunk/Archive2/2e/16c855e9024f7a/output
main.cpp: In function 'auto foo(int)':
main.cpp:2:25: error: use of 'auto foo(int)' before deduction of 'auto'
   return (i == 1) ? i : foo(i-1)+i ;  
                         ^
